# league_bot

./: README.md  input_controller.py  mothership_brain.py  replay_extractor.py  requirements.txt  verify_vision.py  video_input.py
capturer/: CMakeLists.txt
capturer/src/: DXGICapturer.cpp  DXGICapturer.h  SharedMemory.cpp  SharedMemory.h  main.cpp
pico/: SETUP.md  boot.py  code.py
vision/: __init__.py  collect_training_data.py  data.yaml  league_detector.py  train.py
